--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,17 +18,20 @@
             </li>
             <li>
                 <div class="iocn-link">
-                    <a href="/view/attendance01">
-                        <i class='bx bx-collection' ></i>
+                    <a href="#">
+                        <i class='bx bx-time-five' ></i>
                         <span class="link_name">근태관리</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow' ></i>
                 </div>
                 <ul class="sub-menu">
-                    <li><a class="link_name">근태신청</a></li>
-                    <li><a href="/view/attendance01">출/퇴근 조정</a></li>
-                    <li><a href="/view/attendance02">연차/외근 신청</a></li>
-                    <li><a href="/view/attendance04">근태신청관리</a></li>
+                    <li><a class="link_name" href="#">근태관리</a></li>
+                    <li class="sub-menu-header">📝 나의 신청</li>
+                    <li><a href="/view/attendance01">　출/퇴근 조정 신청</a></li>
+                    <li><a href="/view/attendance02">　연차/출장 신청</a></li>
+                    <li class="sub-menu-header">📊 신청 관리</li>
+                    <li><a href="/view/attendance04">　출/퇴근 조정 관리</a></li>
+                    <li><a href="/view/attendance03">　연차/출장 관리</a></li>
                 </ul>
             </li>
             <li>
