--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="/css/bootstrap-5.3.3/bootstrap.css" />
         <link rel="stylesheet" href="/css/timepicker/timepicker.css" />
         <link rel="stylesheet" href="/css/aggrid/ag-theme-alpine.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
     </th:block>
     <!-- js -->
@@ -35,6 +36,9 @@
 
         <script src="/js/timepicker/timepicker.js"></script>
 
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ko.js"></script>
+
         <script th:inline="javascript">
           let loginUser = /*[[${loginUser}]]*/ '';
           let rank = /*[[${rank}]]*/ '';
@@ -53,6 +57,11 @@
     <div layout:fragment="content"></div>
 </section>
 <!-- [content] 영역 끝 -->
+
+<!-- [프로필 모달] 영역 시작 -->
+<div th:replace="~{profile/profile-m01}"></div>
+<!-- [프로필 모달] 영역 끝 -->
+
 <!-- [footer] 영역 시작 -->
 <footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 <!-- [footer] 영역 끝 -->
