--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card card-btn bg-white h-100p" data-url="/api/v1/attendance02">
+                <div class="card card-btn bg-white h-100p" data-url="/view/attendance01">
                     <div class="card-body text-center">
                         <i class="bx bx-calendar-check bx-lg"></i>
                         <h5 class="card-title mt-2">이달의 근무일</h5>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card card-btn bg-white h-100p" data-url="/api/v1/attendance03">
+                <div class="card card-btn bg-white h-100p" data-url="/view/attendance02">
                     <div class="card-body text-center">
                         <i class="bx bxs-plane-alt bx-lg"></i>
                         <h5 class="card-title mt-2">남은 연차</h5>
@@ -50,11 +50,6 @@
                         <span class="quick-link">바로가기 →</span>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 m-t-10">
-                <div id="example" class="ag-theme-alpine" style="width: 100%; height: 65vh;"></div>
             </div>
         </div>
     </div>
