BaseRepository 생성 및 Repository 표준화
공통 유틸리티 생성 예외 처리 체계화
Service 중복 코드 제거
Spring Cache + Caffeine 캐싱 도입

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="name-job">
                         <div id="profileName" class="profile_name"></div>
-                        <div id="rank" class="job"></div>
+                        <div id="position" class="job"></div>
                     </div>
                     <a href="#" id="logout-btn">
                         <i class='bx bx-log-out'></i>
