--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -41,7 +41,7 @@
 
         <script th:inline="javascript">
           let loginUser = /*[[${loginUser}]]*/ '';
-          let rank = /*[[${rank}]]*/ '';
+          let position = /*[[${position}]]*/ '';
         </script>
     </th:block>
 </head>
