--- a/src/main/resources/templates/profile/profile-m01.html
+++ b/src/main/resources/templates/profile/profile-m01.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="profile-info-row">
                         <span class="profile-info-label">직급</span>
-                        <span class="profile-info-value" id="rank">-</span>
+                        <span class="profile-info-value" id="position">-</span>
                     </div>
                     <div class="profile-info-row">
                         <span class="profile-info-label">연차 일수</span>
