--- a/src/main/resources/templates/attendance/att04.html
+++ b/src/main/resources/templates/attendance/att04.html
@@ -16,12 +16,15 @@
         <div class="row">
             <div class="col-md-12">
                 <!-- 검색 폼 영역 -->
-                <div id="attendanceRequestSearchContainer" class="mb-3 m-t-15"></div>
+                <div id="attendanceRequestSearchContainer" class="mb-1 m-t-5"></div>
 
                 <!-- 그리드 영역 -->
                 <div id="attendanceRequestGrid" class="ag-theme-alpine m-b-30" style="width: 100%; height: 600px;"></div>
             </div>
         </div>
     </div>
+
+    <!-- 모달 포함 -->
+    <div th:replace="~{attendance/att04-m01 :: body}"></div>
 </div>
 </html>
