--- a/src/main/resources/templates/profile/profile-m01.html
+++ b/src/main/resources/templates/profile/profile-m01.html
@@ -21,7 +21,7 @@
                 <!-- 프로필 이미지 섹션 -->
                 <div class="profile-image-section">
                     <div class="profile-image-container">
-                        <img id="profileImage" src="/svg/solid/bxs-user.svg" alt="프로필 이미지" class="profile-image">
+                        <img id="profileModalImage" src="/svg/solid/bxs-user.svg" alt="프로필 이미지" class="profile-image">
                         <div class="profile-image-overlay">
                             <button type="button" class="btn-image-upload" id="uploadImageBtn" title="이미지 업로드">
                                 <i class="bx bx-camera"></i>
