로그인 화면 배경화면 변경
사용자 관리화면 추가
출퇴근 기록 화면 추가
CLAUDE.md 파일 최적화

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -10,7 +10,7 @@
 
 .login-body {
     font-family: Arial, sans-serif;
-    background-image: url("/img/join.png");
+    background-image: url("/img/join.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
