--- a/src/main/resources/templates/attendance/att02.html
+++ b/src/main/resources/templates/attendance/att02.html
@@ -5,6 +5,7 @@
     <!-- js -->
     <script src="/js/domain/attendance/att02.js"></script>
     <script src="/js/domain/attendance/att02-m01.js"></script>
+    <script src="/js/domain/attendance/att02-m02.js"></script>
 </head>
 <div layout:fragment="content">
     <div class="container p-t-20">
@@ -23,5 +24,6 @@
         </div>
     </div>
     <div th:replace="~{attendance/att02-m01.html}"></div>
+    <div th:replace="~{attendance/att02-m02.html}"></div>
 </div>
 </html>
