--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -52,6 +52,20 @@
                 </div>
             </div>
         </div>
+
+        <!-- 신청 내역 그리드 -->
+        <div class="row m-t-20">
+            <div class="col-md-12">
+                <div class="card bg-white">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <i class="bx bx-list-ul"></i> 나의 신청 내역
+                        </h5>
+                        <div id="myRequestsGrid" class="ag-theme-alpine" style="height: 400px; width: 100%;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </html>
