--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,9 +12,6 @@
                     <i class='bx bx-grid-alt' ></i>
                     <span class="link_name">대시보드</span>
                 </a>
-                <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/main">대시보드</a></li>
-                </ul>
             </li>
             <li>
                 <div class="iocn-link">
@@ -26,42 +23,37 @@
                 </div>
                 <ul class="sub-menu">
                     <li><a class="link_name" href="#">근태관리</a></li>
-                    <li class="sub-menu-header">📝 나의 신청</li>
                     <li><a href="/view/attendance01">　출/퇴근 조정 신청</a></li>
                     <li><a href="/view/attendance02">　연차/출장 신청</a></li>
                     <!-- 관리자만 볼 수 있는 신청 관리 섹션 -->
-                    <li class="sub-menu-header" sec:authorize="hasAuthority('ROLE_ADMIN')">📊 신청 관리</li>
                     <li sec:authorize="hasAuthority('ROLE_ADMIN')"><a href="/view/attendance04">　출/퇴근 조정 관리</a></li>
                     <li sec:authorize="hasAuthority('ROLE_ADMIN')"><a href="/view/attendance03">　연차/출장 관리</a></li>
                 </ul>
             </li>
             <!-- 관리자 전용 메뉴 -->
             <li sec:authorize="hasAuthority('ROLE_ADMIN')">
+                <a href="/view/user01">
+                    <i class='bx bx-user-circle' ></i>
+                    <span class="link_name">사용자 관리</span>
+                </a>
+            </li>
+            <li sec:authorize="hasAuthority('ROLE_ADMIN')">
                 <a href="/view/chart">
                     <i class='bx bx-line-chart' ></i>
                     <span class="link_name">차트</span>
                 </a>
-                <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/view/chart">차트</a></li>
-                </ul>
             </li>
             <li sec:authorize="hasAuthority('ROLE_ADMIN')">
-                <a href="/view/history">
+                <a href="/view/history01">
                     <i class='bx bx-history'></i>
-                    <span class="link_name">이력</span>
+                    <span class="link_name">출퇴근 기록</span>
                 </a>
-                <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/view/history">이력</a></li>
-                </ul>
             </li>
             <li>
                 <a href="/view/setting">
                     <i class='bx bx-cog' ></i>
                     <span class="link_name">세팅</span>
                 </a>
-                <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/view/setting">세팅</a></li>
-                </ul>
             </li>
             <li>
                 <div class="profile-details">
